@@ -3,6 +3,14 @@
 	* awkgram.y: Fix `print $"2"' case. Thanks to Ed Morton
 	Morton <mortoneccc@comcast.net> for the report.
 
+	Unrelated:
+
+	* awk.h (INSTRUCTION): Make dl a long long for profiling
+	counts on 32 bit systems. Thanks to Peter Lindgren
+	<lindgren@ameritech.net> for the report.
+	* profile.c (indent): Take a long long parameter and fix
+	the printf format.
+
 2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y: Allow @/foo/ as return expression in a function.
